# helloworld

./: .gitignore  CMakeLists.txt
.github/workflows/: cmake-multi-platform.yml
cmake/: ProjectGuard.cmake  common.cmake
